# euler

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
euler/puzzle_0001/: solution1.py  solution2.py
euler/puzzle_0002/: solution1.py
euler/puzzle_0003/: solution1.py
euler/puzzle_0004/: solution1.py  solution2.py  solution3.py  solution4.py
src/euler/problems/: problem0001.py  problem0002.py  problem0003.py  problem0004.py  problem0005.py  problem0006.py  problem0007.py  problem0008.py  problem0009.py  problem0010.py  problem0011.py  problem0012.py  problem0013.py  problem0014.py  problem0015.py  problem0016.py  problem0017.py  problem0018.py  problem0019.py  problem0020.py  problem0021.py  problem0022.py  problem0023.py  problem0024.py  problem0025.py  problem0026.py  problem0027.py  problem0028.py  problem0029.py  problem0030.py  problem0031.py  problem0032.py  problem0033.py  problem0034.py  problem0035.py  problem0036.py  problem0037.py  problem0038.py  problem0039.py  problem0040.py  (+37 more)
src/euler/utils/: continued_fractions.py  digits.py  euler_totient.py  factorization.py  fibonacci.py  prime_list.py  primes.py  resources.py  right_angle_triangles.py  sequences.py
