[project]
name = "euler"
version = "0.0.1"
authors = [
  { name="Pete Dibdin" },
]
description = "Solutions for Project Euler"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pjd199/euler"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"